# polictf-server

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  astylerc  cache_usages.txt  loadtest.pl  maketar.bash  playbook.yml  schema.mwb
cmake/: FindCppCMS.cmake
conf/: fastcgi_params  index.html  nginx.conf  registration.conf  registration.js  run-registration.sh  run-scoreboard.sh  run.sh  scoreboard.conf
conf/nginx/: registration.polictf.it.conf  scoreboard.polictf.it.conf
conf/old/: scoreboard.js
conf/systemd/: registration.service  scoreboard.service
devconf/: dbdump  dbdump.sql  registration.js  scoreboard.js
registration-static-html/: index.html  reg_ko.html  reg_ok.html
registration-static-html/assets/css/: style.css
registration-static-html/assets/js/: register.js
registration-static-html/reset/: reset.html
src/: CMakeLists.txt
src/register/: CMakeLists.txt  dbcontroller.cpp  dbcontroller.hpp  frmIscrizione.cpp  frmIscrizione.hpp  frmPasswordRecovery.cpp  frmPasswordRecovery.hpp  frmPasswordRecoveryInit.cpp  frmPasswordRecoveryInit.hpp  mailer.cpp  mailer.hpp  main.cpp
src/register/smtp-qt/: CMakeLists.txt  smtpclient.cpp
src/scoreboard/: CMakeLists.txt  cache_objects.hpp  dbcontroller.cpp  dbcontroller.hpp  main.cpp  teamstatus.cpp  teamstatus.hpp  verifier.cpp  verifier.hpp
